# gic_cinema

./: .gitignore  README.md  pyproject.toml  run_booking_system.py
src/: app.py
src/cli/: command.py  io.py  registry.py
src/cli/commands/: book.py  check.py  exit.py
src/core/: allocation.py  errors.py  render.py  seat_utils.py  validators.py
src/core/renderers/: ascii_renderer.py  base.py
src/core/services/: booking.py
src/models/: context.py  entities.py
src/state/: context.py
src/utils/: seat_utils.py
tests/: conftest.py
tests/integration/: test_app_flow.py
tests/unit/: test_allocation.py  test_ascii_renderer.py  test_booking_service.py  test_commands.py  test_commands_book_and_check.py  test_models_and_state.py  test_render.py  test_seat_utils.py  test_validators.py
